# ckanext-ndp

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/ndp/: plugin.py
ckanext/ndp/assets/: script.js  webassets.yml
ckanext/ndp/templates/package/snippets/: resource_item.html
ckanext/ndp/tests/: test_plugin.py
